<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P0281_IntentExtras</string>
    <string name="action_settings">Settings</string>
    <string name="inputName">Input your name</string>
    <string name="firstName">First name</string>
    <string name="john">John</string>
    <string name="secondName">Second name</string>
    <string name="smith">Smith</string>
    <string name="submit">Submit</string>

</resources>
